# bcode

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  bcode.toml  flake.nix  taplo.toml
.github/workflows/: architecture-guards.yml  cloudflare-infra.yml  docs-site-check.yml  model-verification.yml  models-site-check.yml  models-site-deploy.yml  release.yml  tui-pty-acceptance.yml
catalog/models/providers/: bedrock.toml  openai.toml
docs/: application-memory.md  eval-architecture.md  eval-workflow.md  frontend-contracts.md  hook-middleware-failures.md  hyperchad-interaction-inventory.md  interactive-tools-architecture.md  model-provider-contract.md  model-response-cache.md  openai-subscription-failover.md  permissions.md  plugin-presentation-manifest-audit.md  provider-auth-usage.md  rate-limit-handling.md  release-builds.md  renderer-architecture.md  retry-fallback-safety.md  sdk-evaluation.md  sdk-session-persistence.md  sdk-testing.md  sdk-tracing.md  session-import-plugins.md  session-persistence-architecture.md  session-view-event-coverage.md  skills.md  stateful-chat.md  tool-result-safety.md  tool-runtime-contract-ownership.md  workflow-persistence-architecture.md  worktrees.md
examples/hello-plugin/: Cargo.toml  bcode-plugin.toml
examples/hello-plugin/src/: lib.rs
examples/question-dynamic-plugin/: Cargo.toml
examples/question-dynamic-plugin/src/: lib.rs
fixtures/evals/agent-edit-tools/: suite.toml
fixtures/evals/direct-tools/: suite.toml
infra/cloudflare/: README.md
plugins/bedrock-provider-plugin/: Cargo.toml  bcode-plugin.toml
plugins/bedrock-provider-plugin/src/: cli.rs  lib.rs  model_catalog.rs
plugins/blims-plugin/: AGENTS.md  Cargo.toml  bcode-plugin.toml
plugins/blims-plugin/src/: cli.rs  lib.rs
plugins/code-review-plugin/: Cargo.toml  bcode-plugin.toml
plugins/code-review-plugin/src/: async_values.rs  cli.rs  code_review_home.rs  code_review_tui.rs  code_review_tui_display.rs  code_review_tui_render.rs  code_review_tui_view.rs  lib.rs  terminal_events.rs  tui.rs  tui_host_types.rs
plugins/default-agents-plugin/: Cargo.toml  bcode-plugin.toml
plugins/default-agents-plugin/src/: lib.rs
plugins/document-plugin/: Cargo.toml  bcode-plugin.toml
plugins/document-plugin/src/: document_tui.rs  lib.rs
plugins/eval-plugin/: Cargo.toml  bcode-plugin.toml
plugins/eval-plugin/src/: cli.rs  eval_data.rs  eval_viewer.rs  lib.rs  tui.rs
plugins/fake-provider-plugin/: Cargo.toml  bcode-plugin.toml
plugins/fake-provider-plugin/src/: lib.rs
plugins/filesystem-plugin/: Cargo.toml  bcode-plugin.toml
plugins/filesystem-plugin/src/: file_change_diff.rs  file_change_tui.rs  filesystem_tui.rs  lib.rs
plugins/git-plugin/: Cargo.toml  bcode-plugin.toml
plugins/git-plugin/src/: git_tui.rs  lib.rs
plugins/github-plugin/: Cargo.toml  bcode-plugin.toml
plugins/github-plugin/src/: lib.rs
plugins/github-review-publisher-plugin/: Cargo.toml  bcode-plugin.toml
plugins/github-review-publisher-plugin/src/: lib.rs
plugins/loop-plugin/: Cargo.toml  bcode-plugin.toml
plugins/loop-plugin/src/: lib.rs
plugins/metrics-plugin/: Cargo.toml  bcode-plugin.toml
plugins/metrics-plugin/src/: cli.rs  lib.rs  metrics_dashboard.rs  tui.rs
plugins/model-plugin/: Cargo.toml  bcode-plugin.toml
plugins/model-plugin/src/: lib.rs
plugins/ocr-plugin/: Cargo.toml  bcode-plugin.toml
plugins/ocr-plugin/src/: lib.rs  ocr_tui.rs
plugins/openai-compatible-provider-plugin/: Cargo.toml  bcode-plugin.toml
plugins/openai-compatible-provider-plugin/src/: auth_pool_state.rs  context_compaction.rs  discovery.rs  lib.rs  model_catalog.rs
plugins/opencode-session-import-plugin/: Cargo.toml  bcode-plugin.toml
plugins/pi-session-import-plugin/: Cargo.toml  bcode-plugin.toml
plugins/pi-session-import-plugin/fixtures/: pi-session-first-user-title.jsonl  pi-session.jsonl
plugins/pi-session-import-plugin/src/: lib.rs
plugins/question-plugin/: Cargo.toml  bcode-plugin.toml
plugins/question-plugin/src/: lib.rs  question_interaction.rs  question_outcome_tui.rs  question_tui.rs  question_types.rs
plugins/ralph-plugin/: Cargo.toml  bcode-plugin.toml
plugins/ralph-plugin/src/: cli.rs  lib.rs
plugins/shell-plugin/: Cargo.toml  bcode-plugin.toml
plugins/shell-plugin/src/: contracts.rs  lib.rs  recording.rs  shell_run_tui.rs  terminal_clean.rs
plugins/skills-plugin/: Cargo.toml  bcode-plugin.toml
plugins/skills-plugin/src/: cli.rs  lib.rs
plugins/vim-edit-plugin/: Cargo.toml  bcode-plugin.toml
plugins/vim-edit-plugin/src/: lib.rs  vim_edit_interaction.rs  vim_edit_playback_tui.rs
plugins/web-search-plugin/: Cargo.toml  bcode-plugin.toml
plugins/web-search-plugin/src/: lib.rs  web_search_tui.rs
plugins/worktree-plugin/: Cargo.toml  bcode-plugin.toml
plugins/worktree-plugin/src/: cli.rs  lib.rs
scripts/: capture-live-shell-tui-performance-baseline.sh  check-artifact-commit-architecture.sh  check-context-accounting-architecture.sh  check-context-occupancy-architecture.sh  check-evals.sh  check-hyperchad-application-boundary.sh  check-hyperchad-semantic-parity-matrix.sh  check-loop-runtime-architecture.sh  check-metrics-persistence-architecture.sh  check-model-catalog-architecture.sh  check-no-normal-full-scans.sh  check-plugin-presentation-manifests.sh  check-plugin-tui-path-presentation.sh  check-sdk-examples.sh  check-session-architecture.sh  check-shell-recording-architecture.sh  check-web-renderer-feature-topology.sh  hyperchad-semantic-parity-matrix.tsv  install-bundled-plugins.sh  plugin-presentation-manifest-inventory.tsv  smoke-bundled-plugins.sh  smoke-filesystem-plugin.sh  smoke-local-daemon.sh  smoke-model-provider.sh  smoke-native-plugin.sh  smoke-openai-compatible-coding-agent.sh  smoke-openai-compatible-provider.sh  smoke-openai-compatible-tool-call.sh  smoke-permission-checkpoint.sh  smoke-permission-policy.sh  smoke-shell-tool.sh  smoke-tool-call.sh  smoke-tui-pty.sh  smoke-turn-cancel.sh
workers/models-catalog/: README.md  wrangler.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+53 files in other folders)
