[workspace]
members = [
    "examples/hello-plugin",
    "plugins/filesystem-plugin",
    "plugins/bedrock-provider-plugin",
    "plugins/default-agents-plugin",
    "plugins/fake-provider-plugin",
    "plugins/openai-compatible-provider-plugin",
    "plugins/shell-plugin",
    "packages/agent-policy",
    "packages/agent-policy/models",
    "packages/agent-profile",
    "packages/bcode",
    "packages/cli",
    "packages/client",
    "packages/command",
    "packages/config",
    "packages/ipc",
    "packages/model",
    "packages/model-provider-runtime",
    "packages/plugin",
    "packages/plugin-sdk",
    "packages/provider-auth",
    "packages/server",
    "packages/session",
    "packages/skill",
    "packages/skill/models",
    "packages/tool",
    "packages/tui",
    "packages/session/models",
]
resolver = "2"

[workspace.package]
authors    = ["Braden Steffaniak"]
edition    = "2024"
license    = "MPL-2.0"
readme     = "README.md"
repository = "https://github.com/BSteffaniak/bcode"
version    = "0.0.1-alpha.0"

[workspace.dependencies]
# Internal bcode packages
bcode_agent_policy                      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/agent-policy" }
bcode_agent_policy_models               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/agent-policy/models" }
bcode_agent_profile                     = { version = "0.0.1-alpha.0", default-features = false, path = "packages/agent-profile" }
bcode_bedrock_provider_plugin           = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/bedrock-provider-plugin" }
bcode_cli                               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli" }
bcode_client                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/client" }
bcode_command                           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/command" }
bcode_config                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config" }
bcode_default_agents_plugin             = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/default-agents-plugin" }
bcode_fake_provider_plugin              = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/fake-provider-plugin" }
bcode_filesystem_plugin                 = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/filesystem-plugin" }
bcode_ipc                               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/ipc" }
bcode_model                             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/model" }
bcode_model_provider_runtime            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/model-provider-runtime" }
bcode_openai_compatible_provider_plugin = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/openai-compatible-provider-plugin" }
bcode_plugin                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin" }
bcode_plugin_sdk                        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin-sdk" }
bcode_provider_auth                     = { version = "0.0.1-alpha.0", default-features = false, path = "packages/provider-auth" }
bcode_server                            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/server" }
bcode_session                           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session" }
bcode_session_models                    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session/models" }
bcode_shell_plugin                      = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/shell-plugin" }
bcode_skill                             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/skill" }
bcode_skill_models                      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/skill/models" }
bcode_tool                              = { version = "0.0.1-alpha.0", default-features = false, path = "packages/tool" }
bcode_tui                               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/tui" }

# BMUX reuse
bmux_codec          = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_ipc            = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_keyboard       = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_text_edit      = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_tui            = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }
bmux_tui_components = { default-features = false, git = "https://github.com/BSteffaniak/bmux.git", branch = "master" }

# External dependencies
aws-config = { version = "1.8.16", default-features = false, features = [
    "credentials-process",
    "rt-tokio",
    "rustls",
    "sso",
] }
aws-credential-types = { version = "1.2.14", default-features = false }
aws-sdk-bedrock = { version = "1.141.0", default-features = false, features = [
    "rt-tokio",
    "rustls",
] }
aws-sdk-bedrockruntime = { version = "1.130.0", default-features = false, features = [
    "rt-tokio",
    "rustls",
] }
aws-smithy-types = { version = "1.4.7", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
clap = { version = "4.5.40", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
globset = { version = "0.4.18", default-features = false }
libloading = { version = "0.9.0", default-features = false }
rand = { version = "0.9.4", default-features = false, features = [
    "os_rng",
    "std",
] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rpassword = { version = "7.4.0", default-features = false }
semver = { version = "1.0.28", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["std"] }
serde_json = { version = "1.0.149", default-features = false, features = [
    "std",
] }
sha2 = { version = "0.10.9", default-features = false }
sshenv_vault = { git = "https://github.com/BSteffaniak/sshenv.git", rev = "87973bb7681c68cb9c787931b0ab402468adb517", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.1", default-features = false }
toml = { version = "1.1.2", default-features = false, features = [
    "parse",
    "serde",
    "std",
] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "std",
] }
unicode-segmentation = { version = "1.13.0", default-features = false }
uuid = { version = "1.21.0", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["std"] }

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

# BMUX local development patches
# [patch."https://github.com/BSteffaniak/bmux.git"]
# bmux_attach_image_protocol = { path = "../wt-bmux/text-inputs/packages/attach-image-protocol" }
# bmux_codec                 = { path = "../wt-bmux/text-inputs/packages/codec" }
# bmux_ipc                   = { path = "../wt-bmux/text-inputs/packages/ipc" }
# bmux_keyboard              = { path = "../wt-bmux/text-inputs/packages/keyboard" }
# bmux_text_edit             = { path = "../wt-bmux/text-inputs/packages/text-edit" }
# bmux_tui                   = { path = "../wt-bmux/text-inputs/packages/tui" }
# bmux_tui_components        = { path = "../wt-bmux/text-inputs/packages/tui-components" }
